[tool.poetry]
name = "llamea"
version = "0.1.0"
description = ""
authors = ["Niki van Stein <n.van.stein@liacs.leidenuniv.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nikivanstein/LLaMEA"
repository = "https://github.com/nikivanstein/LLaMEA"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.4"
ioh = "0.3.14"
scikit-learn = "1.3.0"
pandas = "2.0.3"
openai = "^1.25.2"
seaborn = "^0.13.2"
levenshtein = "^0.25.1"
tqdm = "^4.66.4"
zss = "^1.2.0"
jellyfish = "^1.0.3"
pypop7 = "^0.0.79"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"