[tool.poetry]
name = "llamea"
version = "0.9.3"
description = ""
authors = ["Niki van Stein <n.van.stein@liacs.leidenuniv.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nikivanstein/LLaMEA"
repository = "https://github.com/nikivanstein/LLaMEA"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.4"
ioh = "0.3.14"
scikit-learn = "1.3.0"
pandas = "2.0.3"
openai = "^1.25.2"
seaborn = "^0.13.2"
levenshtein = "^0.25.1"
tqdm = "^4.66.4"
zss = "^1.2.0"
jellyfish = "^1.0.3"
pypop7 = "^0.0.79"
ollama = "^0.2.1"
jsonlines = "^4.0.0"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
configspace = "^1.2.0"
smac = "^2.2.0"
colorama = "0.4.0"
nevergrad = "^1.0.4"
google-generativeai = "^0.8.1"
modcma = "^1.0.8"
shap = "^0.46.0"
lizard = "^1.17.13"
networkx = "^3.4.2"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
codecov = "^2.1.13"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"